--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 pytest = "^8.2.2"
+flake8 = "^7.1.0"
+pytest-cov = "^5.0.0"
 
 
 [build-system]
